redactable/tests/ui/sensitive_nonzero_secret_rejected_slog.stderr
error[E0277]: the trait bound `NonZero<u32>: redactable::__private::PolicyField<Secret>` is not satisfied
 --> tests/ui/sensitive_nonzero_secret_rejected_slog.rs:8:12
  |
8 |     value: NonZeroU32,
  |            ^^^^^^^^^^ the trait `redactable::PolicyApplicable` is not implemented for `NonZero<u32>`
  |
  = help: the following other types implement trait `redactable::PolicyApplicable`:
            Arc<T>
            BTreeMap<K, V>
            BTreeSet<T>
            Box<T>
            Cell<T>
            Cow<'_, str>
            HashMap<K, V, S>
            HashSet<T, S>
          and $N others
  = note: required for `SecretPolicyKind` to implement `redactable::__private::PolicyKindField<Secret, NonZero<u32>>`
  = note: required for `NonZero<u32>` to implement `redactable::__private::PolicyField<Secret>`
